[gd_scene load_steps=14 format=3 uid="uid://dmrcglmfl0km7"]

[ext_resource type="Script" path="res://player/PlayerController.gd" id="1_srxk7"]
[ext_resource type="Texture2D" uid="uid://dvu7j1pfh2o3s" path="res://assets/characters/player.png" id="2_wlan8"]

[sub_resource type="Animation" id="Animation_rfl2k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5fnjo"]
resource_name = "player_walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}

[sub_resource type="Animation" id="Animation_by5px"]
resource_name = "player_walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}

[sub_resource type="Animation" id="Animation_85tc6"]
resource_name = "player_walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}

[sub_resource type="Animation" id="Animation_ra2kb"]
resource_name = "player_walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lf2r1"]
_data = {
"RESET": SubResource("Animation_rfl2k"),
"player_walk_down": SubResource("Animation_5fnjo"),
"player_walk_left": SubResource("Animation_by5px"),
"player_walk_right": SubResource("Animation_85tc6"),
"player_walk_up": SubResource("Animation_ra2kb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpkqb"]
size = Vector2(14, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oacbp"]
radius = 6.0
height = 14.0

[sub_resource type="Animation" id="Animation_r62vl"]
resource_name = "hurt_blink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.490196), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ppumd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eyr8c"]
_data = {
"RESET": SubResource("Animation_ppumd"),
"hurt_blink": SubResource("Animation_r62vl")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_srxk7")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("2_wlan8")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -8.0
offset_top = -16.0
offset_right = 9.0
offset_bottom = 1.0
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lf2r1")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_wpkqb")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
z_index = 1
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_oacbp")

[node name="EffectAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eyr8c")
}

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
